--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "@types/react-dom": "^18.2.5",
     "@types/react-redux": "^7.1.25",
     "@types/redux-logger": "^3.0.9",
-    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
@@ -53,5 +51,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/navermaps": "^3.6.5",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
